solc_mutator_ossfuzz_seed_corpus/test_sol/test_1f8424bc74484f4de9fcb0d6fcaebd8ce0a9cc238051f3d6d2d81480672ef7a3_1a9bb56946a6baa2a566af17dfc716c4377f57a2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
address constant cons0 = address((bytes20(bytes7(0x3fe82f4d5525ea)) ^ (bytes20(address(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF)) & bytes20(address(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF)))));
contract C0 {
  function f0(bool i0) public   payable returns(bytes memory o0)
  {
  }
  receive() external virtual  payable
  {
    if ((false || ((int120(468552720226919698178453412888898070) % (int120(664613997892457936451903530140172287) % int120(0))) <= int120(664613997892457936451903530140172287))))
    {
      if (false)
      {
      }
      else if (((!(false)) && false))
      {
        unchecked {
          (bool l0) = payable(this).send(12723719167370129246);
          0;
          {
          }
        }
      }
      else if ((((uint112(5192296858534827628530496329220095) & (uint112(5192296858534827628530496329220095) ^ uint112(0))) | uint112(5192296858534827628530496329220095)) == uint112(5192296858534827628530496329220095)))
      {
      }
    }
    else
    {
      string memory l1 = string.concat(string("00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"), "000000000000000000000000000000000000000000");
    }
    if (false)
    {
      return;
    }
    else if (false)
    {
    }
    else if (true)
    {
    }
    if (((((~(((~(uint144(20644741830432597583224668161947861850322908))) - uint144(0)))) ** uint56(uint56(0))) << uint24(uint24(16777215))) == uint144(0)))
    {
    }
    else if ((false && true))
    {
    }
    else
    {
    }
    assembly
    {
      {
      }
      {
        for 
        {
        }
        115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
        }
        {
          break
          pop(13855130047547510034326885744608354862634707755236994150862522808693489890035)
          continue
        }
      }
      stop()
    }
  }
  bytes3   s0 = bytes3(0xa005b2);
  modifier m0() virtual
  {
    assembly
    {
      let al0 := mload(mod(cons0, 2048))
    }
    _;
  }
  modifier m1(uint64[2] memory i0) 
  {
    s0 &= bytes3(0x000000);
    _;
  }
  struct St0 {
    bool el0;
    bytes30[1] el1;
    string el2;
    bytes5 el3;
  }
  modifier m2(bool i0) virtual
  {
    _;
  }
  bytes7 public constant cons1 = (((bytes7(bytes6((bytes2(0xffff) & bytes2(0x0000)))) ^ bytes7(0x00000000000000)) ^ bytes7(0x00000000000000)) ^ bytes7(0x00000000000000));
  fallback() external virtual  
  {
    function () internal   returns (address, bool) l0;
    bytes29 l1 = bytes29(0x829afacfdf8bdac6a8ffe305ab90bd6b368b7ac7300681907b5a5c88eb);
    return;
  }
  type T0 is address;
}
library L0 {
  bool public constant cons2 = false;
  event ev0();
  type T1 is int168;
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27
  }
  function f3() internal    returns(bool o0)
  {
  }
}
pragma solidity >= 0.0.0;
using L0 for uint;
// ----
// TypeError 7615: (su0.sol:2001-2006): Only direct number constants and references to such constants are supported by inline assembly.
